Agent - fanuc iSeries/Distribution/30iHSSB/Fwlib32.h


typedef struct odbmdip {
    short   mdiprog;    
    long    mdipntr;    
    short   crntprog;   
    long    crntpntr;   
} ODBMDIP;
typedef struct odbtofs {
    short   datano ;    
    short   type ;      
    long    data ;      
} ODBTOFS ;
typedef struct iodbto {
    short   datano_s ;  
    short   type ;      
    short   datano_e ;  
    union {
        long    m_ofs[5] ;      
        long    m_ofs_a[5] ;    
        long    m_ofs_b[10] ;   
        long    m_ofs_c[20] ;   
        struct  {
            short   tip ;
            long    data[1] ;
        } m_ofs_at[5] ;         
        struct  {
            short   tip ;
            long    data[2] ;
        } m_ofs_bt[5] ;         
        struct  {
            short   tip ;
            long    data[4] ;
        } m_ofs_ct[5] ;         
        short   t_tip[5] ;      
        long    t_ofs[5] ;      
        struct  {
            short   tip ;
            long    data[4] ;
        } t_ofs_a[5] ;          
        struct {
            short   tip ;
            long    data[8] ;
        } t_ofs_b[5] ;          
        long    t_ofs_2g[15];   
        long    m_ofs_cnr[10];  
        struct  {
                long    data[2];
        } t_ofs_ex[5];		     
    } u ;   
} IODBTO ;
typedef struct iodbzofs {
    short   datano ;            
    short   type ;              
    long    data[MAX_AXIS] ;    
} IODBZOFS ;
typedef struct iodbzor {
    short   datano_s ;  
    short   type ;      
    short   datano_e ;  
    long    data[8*MAX_AXIS] ;  
} IODBZOR ; 
typedef struct iodbpsd {
    short   datano ;    
    short   type ;      
    union {
        char    cdata ;     
        short   idata ;
        long    ldata ;
        REALPRM rdata ;
        char    cdatas[MAX_AXIS] ;
        short   idatas[MAX_AXIS] ;
        long    ldatas[MAX_AXIS] ;
        REALPRM rdatas[MAX_AXIS] ;
    } u ;
} IODBPSD ;
typedef struct iodbpsd {
    short   datano ;    
    short   type ;      
    union {
        char    cdata ;     
        short   idata ;
        long    ldata ;
        char    cdatas[MAX_AXIS] ;
        short   idatas[MAX_AXIS] ;
        long    ldatas[MAX_AXIS] ;
    } u ;
} IODBPSD ;
typedef struct iodbpi {
    short   datano_s ;  
    short   dummy ;     
    short   datano_e ;  
    char    data[5] ;   
} IODBPI ;  
typedef struct odbm {
    short   datano ;    
    short   dummy ;     
    long    mcr_val ;   
    short   dec_val ;   
} ODBM ;
typedef struct iodbmr {
    short   datano_s ;  
    short   dummy ;     
    short   datano_e ;  
    struct {
        long    mcr_val ;   
        short   dec_val ;   
    } data[5] ;
} IODBMR ;  
typedef struct odbpm {
    long    datano ;    
    short   dummy ;     
    long    mcr_val ;   
    short   dec_val ;   
} ODBPM ;
typedef struct iodbpr {
    long    datano_s ;  
    short   dummy ;     
    long    datano_e ;  
    struct {
        long    mcr_val ;   
        short   dec_val ;   
    } data[5] ;
} IODBPR ;  
typedef struct odbtlinf {
    short   ofs_type;
    short   use_no;
} ODBTLINF;
typedef struct odbmvinf {
    short   use_no1;
    short   use_no2;
} ODBMVINF;
typedef struct odbpminf {
    short       use_no1;
#ifdef PCD_UWORD
    unsigned short  use_no2;
#else
    short       use_no2;
#endif
    short       v2_type;
} ODBPMINF;
typedef struct odbpminf {
    short       use_no1;
#ifdef PCD_UWORD
    unsigned short  use_no2;
#else
    short       use_no2;
#endif
    short       v2_type1;
    short       v2_type2;
} ODBPMINF;
typedef struct odbfofs {
    long    mcrval;
    short   decval;
} ODBFOFS;
typedef struct odbtlife1 {
    short   dummy ; 
    short   type ;  
    long    data ;  
} ODBTLIFE1 ;
typedef struct odbtlife2 {
    short   dummy[2] ;  
    long    data ;      
} ODBTLIFE2 ;
typedef struct odbtlife3 {
    short   datano ;    
    short   dummy ;     
    long    data ;      
} ODBTLIFE3 ;
typedef struct odbtlife4 {
    short   datano ;    
    short   type ;      
    long    data ;      
} ODBTLIFE4 ;
typedef struct odbtlife5 {
    long    dummy ; 
    long    type ;  
    long    data ;  
} ODBTLIFE5 ;
typedef struct iodbtr {
    short   datano_s ;  
    short   dummy ;     
    short   datano_e ;  
    struct {
        long    ntool ;     
        long    life ;      
        long    count ;     
    } data[5] ;
} IODBTR ;  
typedef struct odbtg {
    short   grp_num ;   
    short   dummy[2] ;  
    long    ntool ;     
    long    life ;      
    long    count ;     
    struct {
        long    tuse_num ;      
        long    tool_num ;      
        long    length_num ;    
        long    radius_num ;    
        long    tinfo ;         
    } data[5] ;
} ODBTG ;   
typedef struct idbwrc {
    short   datano_s ;  
    short   dummy ;     
    short   datano_e ;  
    struct {
        long    dummy[2] ;  
        long    count ;     
    } data[5] ;
} IDBWRC ;  
typedef struct odbusegr {
    short   datano; 
    short   type;   
    long    next;   
    long    use;    
    long    slct;   
} ODBUSEGR;
typedef struct odbmdipo8 {
    long   mdiprog;     
    long   mdipntr;     
    long   crntprog;    
    long   crntpntr;    
} ODBMDIPO8;
FWLIBAPI short WINAPI cnc_rdmdipntr( unsigned short, ODBMDIP * ) ;
FWLIBAPI short WINAPI cnc_rdtofs( unsigned short, short, short, short, ODBTOFS * ) ;
FWLIBAPI short WINAPI cnc_rdtofsr( unsigned short, short, short, short, short, IODBTO * ) ;
FWLIBAPI short WINAPI cnc_wrtofsr( unsigned short, short, IODBTO * ) ;
FWLIBAPI short WINAPI cnc_rdzofs( unsigned short, short, short, short, IODBZOFS * ) ;
FWLIBAPI short WINAPI cnc_wrzofs( unsigned short, short, IODBZOFS * ) ;
FWLIBAPI short WINAPI cnc_rdzofsr( unsigned short, short, short, short, short, IODBZOR * ) ;
FWLIBAPI short WINAPI cnc_wrzofsr( unsigned short, short, IODBZOR * ) ;
FWLIBAPI short WINAPI cnc_rdparam( unsigned short, short, short, short, IODBPSD * ) ;
FWLIBAPI short WINAPI cnc_wrparam( unsigned short, short, IODBPSD * ) ;
FWLIBAPI short WINAPI cnc_rdparar( unsigned short, short *, short, short *, short *, void * ) ;
FWLIBAPI short WINAPI cnc_wrparas( unsigned short, short, void * ) ;
FWLIBAPI short WINAPI cnc_rdset( unsigned short, short, short, short, IODBPSD * ) ;
FWLIBAPI short WINAPI cnc_wrset( unsigned short, short, IODBPSD * ) ;
FWLIBAPI short WINAPI cnc_rdsetr( unsigned short, short *, short, short *, short *, void * ) ;
FWLIBAPI short WINAPI cnc_wrsets( unsigned short, short, void * ) ;
FWLIBAPI short WINAPI cnc_rdpitchr( unsigned short, short, short, short, IODBPI * ) ;
FWLIBAPI short WINAPI cnc_wrpitchr( unsigned short, short, IODBPI * ) ;
FWLIBAPI short WINAPI cnc_rdmacro( unsigned short, short, short, ODBM * ) ;
FWLIBAPI short WINAPI cnc_rdmacror( unsigned short, short, short, short, IODBMR * ) ;
FWLIBAPI short WINAPI cnc_wrmacror( unsigned short, short, IODBMR * ) ;
FWLIBAPI short WINAPI cnc_rdpmacro( unsigned short, long, ODBPM * ) ;
FWLIBAPI short WINAPI cnc_rdpmacror( unsigned short, long, long, unsigned short, IODBPR * ) ;
FWLIBAPI short WINAPI cnc_wrpmacror( unsigned short, unsigned short, IODBPR * ) ;
FWLIBAPI short WINAPI cnc_rdtofsinfo( unsigned short, ODBTLINF * ) ;
FWLIBAPI short WINAPI cnc_rdmacroinfo( unsigned short, ODBMVINF * ) ;
FWLIBAPI short WINAPI cnc_rdpmacroinfo( unsigned short, ODBPMINF * ) ;
FWLIBAPI short WINAPI cnc_rdgrpid( unsigned short, short, ODBTLIFE1 * ) ;
FWLIBAPI short WINAPI cnc_rdngrp( unsigned short, ODBTLIFE2 * ) ;
FWLIBAPI short WINAPI cnc_rdntool( unsigned short, short, ODBTLIFE3 * ) ;
FWLIBAPI short WINAPI cnc_rdlife( unsigned short, short, ODBTLIFE3 * ) ;
FWLIBAPI short WINAPI cnc_rdcount( unsigned short, short, ODBTLIFE3 * ) ;
FWLIBAPI short WINAPI cnc_rd1length( unsigned short, short, short, ODBTLIFE4 * ) ;
FWLIBAPI short WINAPI cnc_rd2length( unsigned short, short, short, ODBTLIFE4 * ) ;
FWLIBAPI short WINAPI cnc_rd1radius( unsigned short, short, short, ODBTLIFE4 * ) ;
FWLIBAPI short WINAPI cnc_rd2radius( unsigned short, short, short, ODBTLIFE4 * ) ;
FWLIBAPI short WINAPI cnc_t1info( unsigned short, short, short, ODBTLIFE4 * ) ;
FWLIBAPI short WINAPI cnc_t2info( unsigned short, short, short, ODBTLIFE4 * ) ;
FWLIBAPI short WINAPI cnc_toolnum( unsigned short, short, short, ODBTLIFE4 * ) ;
FWLIBAPI short WINAPI cnc_rdtoolrng( unsigned short, short, short, short, IODBTR * ) ;
FWLIBAPI short WINAPI cnc_rdtoolgrp( unsigned short, short, short, ODBTG * ) ;
FWLIBAPI short WINAPI cnc_wrcountr( unsigned short, short, IDBWRC * ) ;
FWLIBAPI short WINAPI cnc_rdusegrpid( unsigned short, ODBUSEGR * ) ;
FWLIBAPI short WINAPI cnc_rdgrpid2( unsigned short, long, ODBTLIFE5 * ) ;
 FWLIBAPI short WINAPI cnc_rdfixoffs( unsigned short, short, short, ODBFOFS * ) ;
#define ODBMDIP		ODBMDIPO8
#define cnc_rdmdipntr	cnc_rdmdipntro8